flux/ddns-updater/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ddns-updater
  namespace: ddns-updater
  labels:
    app: ddns-updater
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ddns-updater
  template:
    metadata:
      labels:
        app: ddns-updater
    spec:
      containers:
      - name: ddns-updater
        image: qmcgaw/ddns-updater:latest
        ports:
        - containerPort: 8000
          name: webui
        volumeMounts:
        - name: config
          mountPath: /updater/config
      volumes:
      - name: config
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: ddns-updater-service
  namespace: ddns-updater
spec:
  selector:
    app: ddns-updater
  ports:
  - name: webui
    port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ddns-updater-ingress
  namespace: ddns-updater
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: ddns-updater.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ddns-updater-service
            port:
              number: 8000
